2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>

	* ContentControlTest.cs: Added.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewboxTest.cs: Added StretchDirection tests.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewboxTest.cs: Added more layout tests.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewboxTest.cs: Added some tests.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewboxTest.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* HeaderedContentControlTest.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added ImageFailed.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added more tests.
	* Test.png: Added.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added more MeasureOverride tests.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Fixed MeasureOverrideMixedAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Fixed MeasureOverrideInfiniteAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added MeasureOverrideInfiniteAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added MeasureOverrideStretchUniformToFillDifferentWidthHeight.

2007-07-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added layout tests.

2007-07-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* SliderTest.cs: Switched to implemented TickPlacement.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* SliderTest.cs: Added some TickBar.ReservedSpace tests.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderTest.cs: Added drawing tests.

2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderTest.cs: Added drawing tests.
