@@ -1,3 +1,7 @@
+2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* SliderTest.cs: Changed to use implemented types.
+
 2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* ContentControlTest.cs: Added.
